5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions (1)/1836_1273.log
== TEST (2019-07-01 22:40:28) 
-- CODE:
from numpy import *
from numpy.linalg import*

p = array([50,-120, 350, 870])

rua = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0],[1,0,0,1]])

x  = dot(inv(rua), p.T)
p2 = inv(rua)
ruaa = p.T
print(x)
print(p2)
print(ruaa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:40:51) 
-- CODE:
from numpy import *
from numpy.linalg import*

p = array([50,-120, 350, 870])

rua = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0],[1,0,0,1]])

x  = dot(inv(rua), p.T)
p2 = inv(rua)
ruaa = p.T
print(x)
print(p2)
print(ruaa)
-- EXECUTION TIME:
1.22775
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
[[ 1.  1.  1.  0.]
 [ 0.  1.  1.  0.]
 [ 0.  0.  1.  0.]
 [-1. -1. -1.  1.]]
[  50 -120  350  870]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 22:41:06) 
-- CODE:
from numpy import *
from numpy.linalg import*

p = array([[50,-120, 350, 870]])

rua = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0],[1,0,0,1]])

x  = dot(inv(rua), p.T)
p2 = inv(rua)
ruaa = p.T
print(x)
print(p2)
print(ruaa)
-- EXECUTION TIME:
1.15724
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[[280.]
 [230.]
 [350.]
 [590.]]
[[ 1.  1.  1.  0.]
 [ 0.  1.  1.  0.]
 [ 0.  0.  1.  0.]
 [-1. -1. -1.  1.]]
[[  50]
 [-120]
 [ 350]
 [ 870]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:41:06) 
-- CODE:
from numpy import *
from numpy.linalg import*

p = array([[50,-120, 350, 870]])

rua = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0],[1,0,0,1]])

x  = dot(inv(rua), p.T)
p2 = inv(rua)
ruaa = p.T
print(x)
print(p2)
print(ruaa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 22:41:39) 
-- CODE:
from numpy import *
from numpy.linalg import*

a = array([50 , -120 , 350 , 870])

rua = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0],[1,0,0,1]])

x  = dot(inv(rua), a.T)
aa = inv(rua)
ruaa = a.T
print(x)
print(aa)
print(ruaa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:53:24) 
-- CODE:
from numpy import *
from numpy.linalg import*

a = array([50 , -120 , 350 , 870])

rua = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0],[1,0,0,1]])

x  = dot(inv(rua), a.T)
aa = inv(rua)
ruaa = a.T
print(x)
print(aa)
print(ruaa
-- ERROR:
File "XXXX", line 14
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:53:39) 
-- CODE:
from numpy import *
from numpy.linalg import*

a = array([50 , -120 , 350 , 870])

rua = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0],[1,0,0,1]])

x  = dot(inv(rua), a.T)
aa = inv(rua)
ruaa = a.T
print(x)
print(aa)
print(ruaa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 07:53:57) 
-- CODE:
from numpy import *
from numpy.linalg import*

a = array([50 , -120 , 350 , 870])

rua = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0],[1,0,0,1]])

x  = dot(inv(rua), a.T)
aa = inv(rua)
ruaa = a.T
print(x)
print(aa)
print(ruaa)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 07:54:02) 
-- CODE:
from numpy import *
from numpy.linalg import*

a = array([50 , -120 , 350 , 870])

rua = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0],[1,0,0,1]])

x  = dot(inv(rua), a.T)
aa = inv(rua)
ruaa = a.T
print(x)
print(aa)
print(ruaa)
-- EXECUTION TIME:
1.08209
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
[[ 1.  1.  1.  0.]
 [ 0.  1.  1.  0.]
 [ 0.  0.  1.  0.]
 [-1. -1. -1.  1.]]
[  50 -120  350  870]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 09:48:39) 
-- CODE:

from numpy import *
from numpy.linalg import *

a = array([50 , -120 , 350 , 870])

rua = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0],[1,0,0,1]])

x  = dot(inv(rua), a.T)
aa = inv(rua)
ruaa = a.T
print(x)
print(aa)
print(ruaa)

-- EXECUTION TIME:
1.27865
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
[[ 1.  1.  1.  0.]
 [ 0.  1.  1.  0.]
 [ 0.  0.  1.  0.]
 [-1. -1. -1.  1.]]
[  50 -120  350  870]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 09:49:06) 
-- CODE:

from numpy import *
from numpy.linalg import *

a = array([50 , -120 , 350 , 870])

rua = array([[1,-1,0,0], [0,1,-1,0], [0,0,1,0],[1,0,0,1]])

x  = dot(inv(rua), a.T)
aa = inv(rua)
ruaa = a.T
print(x)
print(aa)
print(ruaa)

-- EXECUTION TIME:
1.02032
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
[[ 1.  1.  1.  0.]
 [ 0.  1.  1.  0.]
 [ 0.  0.  1.  0.]
 [-1. -1. -1.  1.]]
[  50 -120  350  870]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
